# distributed_task_queue

./: Cargo.toml  README.md
examples/: scheduled_tasks.rs  simple_worker.rs  task_client.rs
src/: client.rs  error.rs  lib.rs  queue.rs  scheduler.rs  task.rs  worker.rs
