[package]
name = "distributed_task_queue"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight distributed task queue similar to Celery, using Rust and Redis"
license = "MIT"
repository = "https://github.com/yourusername/distributed_task_queue"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "simple_worker"
path = "examples/simple_worker.rs"

[[example]]
name = "task_client"
path = "examples/task_client.rs"

[[example]]
name = "scheduled_tasks"
path = "examples/scheduled_tasks.rs" 